--- a/Project.toml
+++ b/Project.toml
@@ -8,7 +8,7 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 
 [compat]
 Hive = "≥ 0.3.0"
-JDBC = "≥ 0.4.0"
+JDBC = "≥ 0.5.0"
 LibPQ = "≥ 0.9.1"
 MySQL = "≥ 0.7.0"
 ODBC = "≥ 0.8.1"
@@ -17,6 +17,7 @@ julia = "1"
 
 [extras]
 Hive = "6735fb99-e7a2-5b86-aa6b-3fb73ebb43ff"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 JDBC = "6042db11-3c3d-5e84-8dba-9cbf74c9ba48"
 Jive = "ba5e3d4b-8524-549f-bc71-e76ad9e9deed"
 LibPQ = "194296ae-ab2e-5f79-8cd4-7183a0a5a0d1"
@@ -26,4 +27,4 @@ SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "Jive", "LibPQ", "SQLite", "MySQL", "ODBC", "JDBC", "Hive"]
+test = ["Test", "Jive", "LibPQ", "SQLite", "MySQL", "ODBC", "DataFrames", "JDBC", "Hive"]
