--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Octo"
 uuid = "16905944-f982-529b-abb2-b839f98f160b"
 authors = ["WooKyoung Noh <wookay.noh@gmail.com>"]
-version = "0.2.6"
+version = "0.2.7-DEV"
 
 [deps]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
@@ -9,11 +9,11 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 [compat]
 Hive = "≥ 0.3.0"
 JDBC = "≥ 0.5.0"
-LibPQ = "≥ 0.9.1"
-MySQL = "≥ 1.0.0"
-ODBC = "≥ 0.8.1"
-SQLite = "≥ 1.0.2"
-DataFrames = "0.18, 0.19, 0.20"
+LibPQ = "1.1, 1.2"
+MySQL = "1.0, 1.1"
+ODBC = "1.0"
+SQLite = "1.0"
+DataFrames = "0.20, 0.21"
 julia = "1"
 
 [extras]
