--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,10 @@ addons:
 env:
   - POSTGRESQL_VERSION=9.6 PGHOST="/var/run/postgresql" ODBC_TEST_DRIVERS="postgresql"
 
+cache:
+  directories:
+  - $HOME/.julia/artifacts
+
 before_install:
   - psql --version
 
@@ -56,6 +60,7 @@ before_script:
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew install mysql; brew services start mysql; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then curl -O https://downloads.mariadb.com/Connectors/odbc/connector-odbc-3.1.7/mariadb-connector-odbc-3.1.7-ga-debian-x86_64.tar.gz; mkdir mariadb64; tar xfz mariadb-connector-odbc-3.1.7-ga-debian-x86_64.tar.gz -C mariadb64; curl -O https://downloads.mariadb.com/Connectors/odbc/connector-odbc-3.1.7/mariadb-connector-odbc-3.1.7-ga-debian-i686.tar.gz; mkdir mariadb32; tar xfz mariadb-connector-odbc-3.1.7-ga-debian-i686.tar.gz -C mariadb32; fi
   - if [ "$TRAVIS_OS_NAME" == "windows" ]; then curl -O https://downloads.mariadb.com/Connectors/odbc/connector-odbc-3.1.7/mariadb-connector-odbc-3.1.7-win64.msi; echo 'making dir'; mkdir /c/mariadb64; echo 'msiexecing'; lessmsi x mariadb-connector-odbc-3.1.7-win64.msi; fi
+  - if [[ "$TRAVIS_OS_NAME" == linux ]]; then julia --color=yes -e 'using Pkg; pkg"add ODBC"; pkg"precompile"; pkg"test ODBC"'             ; fi
 
   # linux - MySQL      - 5.6.33
   - if [[ "$TRAVIS_OS_NAME" == linux ]]; then mysql -e 'show variables like "socket";' -uroot                                              ; fi
@@ -69,7 +74,7 @@ before_script:
   - if [[ "$TRAVIS_OS_NAME" == osx   ]]; then sleep 0.1                                                                                    ; fi
 
   # MySQL
-  - mysql -e 'CREATE DATABASE mysqltest;' -uroot
+  - mysql -e 'CREATE DATABASE IF NOT EXISTS mysqltest;' -uroot
   - mysql -e 'GRANT ALL PRIVILEGES ON mysqltest.* TO "root"@"localhost"' -uroot
   - mysql --version
 
