--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,10 @@ os:
 julia:
   - 1.3
 
-matrix:
-  include:
-    - os: linux
-      julia: nightly
+#matrix:
+#  include:
+#    - os: linux
+#      julia: nightly
 
 services:
   - postgresql
