--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Octo"
 uuid = "16905944-f982-529b-abb2-b839f98f160b"
 authors = ["WooKyoung Noh <wookay.noh@gmail.com>"]
-version = "0.2.7-DEV"
+version = "0.2.7"
 
 [deps]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
@@ -9,7 +9,7 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 [compat]
 Hive = "≥ 0.3.0"
 JDBC = "≥ 0.5.0"
-LibPQ = "1.1, 1.2"
+LibPQ = "1.1, 1.2, 1.3, 1.4"
 MySQL = "1.0, 1.1"
 ODBC = "1.0"
 MariaDB_Connector_C_jll = "3.1"
