--- a/Project.toml
+++ b/Project.toml
@@ -1,20 +1,17 @@
 name = "Octo"
 uuid = "16905944-f982-529b-abb2-b839f98f160b"
 authors = ["WooKyoung Noh <wookay.noh@gmail.com>"]
-version = "0.2.8"
+version = "0.2.9-DEV"
 
 [deps]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 
 [compat]
-Hive = "≥ 0.3.0"
-JDBC = "≥ 0.5.0"
-LibPQ = "1.1, 1.2, 1.3, 1.4"
-MySQL = "1.0, 1.1"
-ODBC = "1.0"
-MariaDB_Connector_C_jll = "3.1"
+Jive = "0.2"
+LibPQ = "1.4, 1.6"
 SQLite = "1.0"
-DataFrames = "0.20, 0.21"
+MySQL = "1.0, 1.1"
+MariaDB_Connector_C_jll = "3.1"
 julia = "1"
 
 [extras]
@@ -23,11 +20,7 @@ Jive = "ba5e3d4b-8524-549f-bc71-e76ad9e9deed"
 LibPQ = "194296ae-ab2e-5f79-8cd4-7183a0a5a0d1"
 SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 MySQL = "39abe10b-433b-5dbd-92d4-e302a9df00cd"
-ODBC = "be6f12e9-ca4f-5eb2-a339-a4f995cc0291"
 MariaDB_Connector_C_jll = "aabc7e14-95f1-5e66-9f32-aea603782360"
-DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
-JDBC = "6042db11-3c3d-5e84-8dba-9cbf74c9ba48"
-Hive = "6735fb99-e7a2-5b86-aa6b-3fb73ebb43ff"
 
 [targets]
-test = ["Test", "Jive", "LibPQ", "SQLite", "MySQL", "ODBC", "MariaDB_Connector_C_jll", "DataFrames", "JDBC", "Hive"]
+test = ["Test", "Jive", "LibPQ", "SQLite", "MySQL", "MariaDB_Connector_C_jll"]
