--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,7 +4,17 @@ on: [pull_request, push]
 
 jobs:
   Test:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        julia-version: [1.5.2]
+        julia-arch: [x64]
+        os: [ubuntu-latest]
+        include:
+          - julia-version: nightly
+            os: ubuntu-latest
+          - julia-version: 1.3.0
+            os: ubuntu-latest
 
     services:
       postgres:
@@ -58,9 +68,9 @@ jobs:
              julia --project=. -e 'using Pkg; Pkg.test(coverage=true)'
 
       - name: Coverage
-        if: github.event.ref == 'refs/heads/master'
+        if: matrix.julia-version == '1.5.2' && github.event.ref == 'refs/heads/master'
         run: |
              julia --project=. -e 'using Pkg; Pkg.add("Coverage"); using Coverage; cov = Coverage.process_folder(); mkdir("coverage"); Coverage.LCOV.writefile("coverage/lcov.info", cov)'
 
       - uses: codecov/codecov-action@v1
-        if: github.event.ref == 'refs/heads/master'
+        if: matrix.julia-version == '1.5.2' && github.event.ref == 'refs/heads/master'
