--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Octo"
 uuid = "16905944-f982-529b-abb2-b839f98f160b"
 authors = ["WooKyoung Noh <wookay.noh@gmail.com>"]
-version = "0.2.9"
+version = "0.2.10-DEV"
 
 [deps]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
@@ -12,6 +12,7 @@ LibPQ = "1.4, 1.6"
 SQLite = "1.1"
 MySQL = "1.0, 1.1"
 MariaDB_Connector_C_jll = "3.1"
+DataFrames = "1.1"
 julia = "1"
 
 [extras]
@@ -21,6 +22,7 @@ LibPQ = "194296ae-ab2e-5f79-8cd4-7183a0a5a0d1"
 SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 MySQL = "39abe10b-433b-5dbd-92d4-e302a9df00cd"
 MariaDB_Connector_C_jll = "aabc7e14-95f1-5e66-9f32-aea603782360"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 
 [targets]
-test = ["Test", "Jive", "LibPQ", "SQLite", "MySQL", "MariaDB_Connector_C_jll"]
+test = ["Test", "Jive", "LibPQ", "SQLite", "MySQL", "MariaDB_Connector_C_jll", "DataFrames"]
