--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ SQLite = "1.1"
 MySQL = "1.0, 1.1"
 MariaDB_Connector_C_jll = "3.1"
 DataFrames = "1.1"
+DuckDB = "0.2"
 julia = "1"
 
 [extras]
@@ -23,6 +24,7 @@ SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 MySQL = "39abe10b-433b-5dbd-92d4-e302a9df00cd"
 MariaDB_Connector_C_jll = "aabc7e14-95f1-5e66-9f32-aea603782360"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DuckDB = "d2f5444f-75bc-4fdf-ac35-56f514c445e1"
 
 [targets]
-test = ["Test", "Jive", "LibPQ", "SQLite", "MySQL", "MariaDB_Connector_C_jll", "DataFrames"]
+test = ["Test", "Jive", "LibPQ", "SQLite", "MySQL", "MariaDB_Connector_C_jll", "DataFrames", "DuckDB"]
