--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,8 @@ LibPQ = "1.4, 1.6"
 SQLite = "1.1"
 MySQL = "1.0, 1.1"
 MariaDB_Connector_C_jll = "3.1"
+DuckDB = "0.4"
+DuckDB_jll = "0.4"
 DataFrames = "1.1"
 julia = "1"
 
@@ -22,7 +24,9 @@ LibPQ = "194296ae-ab2e-5f79-8cd4-7183a0a5a0d1"
 SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 MySQL = "39abe10b-433b-5dbd-92d4-e302a9df00cd"
 MariaDB_Connector_C_jll = "aabc7e14-95f1-5e66-9f32-aea603782360"
+DuckDB = "d2f5444f-75bc-4fdf-ac35-56f514c445e1"
+DuckDB_jll = "2cbbab25-fc8b-58cf-88d4-687a02676033"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 
 [targets]
-test = ["Test", "Jive", "LibPQ", "SQLite", "MySQL", "MariaDB_Connector_C_jll", "DataFrames"]
+test = ["Test", "Jive", "LibPQ", "SQLite", "MySQL", "MariaDB_Connector_C_jll", "DuckDB", "DuckDB_jll", "DataFrames"]
