--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Octo"
 uuid = "16905944-f982-529b-abb2-b839f98f160b"
 authors = ["WooKyoung Noh <wookay.noh@gmail.com>"]
-version = "0.2.10"
+version = "0.2.11-DEV"
 
 [deps]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
@@ -14,7 +14,7 @@ MySQL = "1.0, 1.1"
 MariaDB_Connector_C_jll = "3.1"
 DuckDB = "0.4"
 DuckDB_jll = "0.4"
-DataFrames = "1.1"
+DataFrames = "1.1, 1.3"
 julia = "1"
 
 [extras]
