--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -7,13 +7,15 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        julia-version: [1.7.3]
+        julia-version: [1.8.3]
         julia-arch: [x64]
         os: [ubuntu-latest]
         include:
           - julia-version: nightly
             os: ubuntu-latest
-          - julia-version: 1.6.6
+          - julia-version: 1.7.3
+            os: ubuntu-latest
+          - julia-version: 1.6.7
             os: ubuntu-latest
 
     services:
