--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -7,11 +7,13 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        julia-version: [1.8.3]
+        julia-version: [1.9.3]
         julia-arch: [x64]
         os: [ubuntu-latest]
         include:
           - julia-version: nightly
+            os: ubuntu-latest
+          - julia-version: 1.8.5
             os: ubuntu-latest
           - julia-version: 1.7.3
             os: ubuntu-latest
