--- a/Project.toml
+++ b/Project.toml
@@ -8,13 +8,12 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 
 [compat]
 Jive = "0.2"
-LibPQ = "1.4, 1.6"
+LibPQ = "1.6, 1.7"
 SQLite = "1.6"
-MySQL = "1.0, 1.1"
+MySQL = "1.1, 1.4"
 MariaDB_Connector_C_jll = "3.1"
-DuckDB = "0.4"
-DuckDB_jll = "0.4"
-DataFrames = "1.1, 1.3"
+DuckDB = "0.4, 0.8"
+DataFrames = "1.3, 1.6"
 julia = "1"
 
 [extras]
@@ -25,8 +24,7 @@ SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 MySQL = "39abe10b-433b-5dbd-92d4-e302a9df00cd"
 MariaDB_Connector_C_jll = "aabc7e14-95f1-5e66-9f32-aea603782360"
 DuckDB = "d2f5444f-75bc-4fdf-ac35-56f514c445e1"
-DuckDB_jll = "2cbbab25-fc8b-58cf-88d4-687a02676033"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 
 [targets]
-test = ["Test", "Jive", "LibPQ", "SQLite", "MySQL", "MariaDB_Connector_C_jll", "DuckDB", "DuckDB_jll", "DataFrames"]
+test = ["Test", "Jive", "LibPQ", "SQLite", "MySQL", "MariaDB_Connector_C_jll", "DuckDB", "DataFrames"]
