github actions - RunForMacOS - stuck on Precompiling LibPQ, DataFrames

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -73,15 +73,18 @@ jobs:
              julia --project=. -e 'using Pkg; Pkg.add("Coverage"); using Coverage; cov = Coverage.process_folder(); mkdir("coverage"); Coverage.LCOV.writefile("coverage/lcov.info", cov)'
       - uses: codecov/codecov-action@v1
 
-  RunForMacOS:
-    needs: Test
-    if: github.event.ref == 'refs/heads/master'
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@master
-      - name: runtests
-        run: |
-             julia --project=. -e 'using Pkg; Pkg.test()'
+  ###
+  ### stuck on Precompiling LibPQ, DataFrames
+  ###
+  # RunForMacOS:
+  #   needs: Test
+  #   if: github.event.ref == 'refs/heads/master'
+  #   runs-on: macos-latest
+  #   steps:
+  #     - uses: actions/checkout@master
+  #     - name: runtests
+  #       run: |
+  #            julia --project=. -e 'using Pkg; Pkg.test()'
 
   RunForWindows:
     needs: Test
