--- a/Project.toml
+++ b/Project.toml
@@ -12,7 +12,7 @@ LibPQ = "1.6, 1.7"
 SQLite = "1.6"
 MySQL = "1.1, 1.4"
 MariaDB_Connector_C_jll = "3.1"
-DuckDB = "0.4, 0.8"
+DuckDB = "1.0"
 DataFrames = "1.3, 1.6"
 julia = "1"
 
