--- a/Project.toml
+++ b/Project.toml
@@ -7,13 +7,13 @@ version = "0.2.14-DEV"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 
 [compat]
-Jive = "0.2"
-LibPQ = "1.6, 1.7"
+Jive = "0.3"
+LibPQ = "1.18"
 SQLite = "1.6"
-MySQL = "1.1, 1.4"
-MariaDB_Connector_C_jll = "3.1"
-DuckDB = "1.0"
-DataFrames = "1.3, 1.6"
+MySQL = "1.4"
+MariaDB_Connector_C_jll = "3.3"
+DuckDB = "1.2"
+DataFrames = "1.7"
 julia = "1"
 
 [extras]
