--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -18,13 +18,19 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        julia-version: [nightly, 1.6.7]
-        runtests_with_coverage: [false]
+        julia-version: [1.11.5]         # April 4, 2025
         julia-arch: [x64]
+        coverage: [true]
         include:
-          - julia-version: 1.10.0
-            runtests_with_coverage: true
-
+          - julia-version: nightly
+            os: ubuntu-latest
+            coverage: false
+          - julia-version: 1.12.0-beta2 # April 25, 2025
+            os: ubuntu-latest
+            coverage: false
+          - julia-version: 1.6.7        # July 20, 2022
+            os: ubuntu-latest
+            coverage: false
     services:
       postgres:
         image: postgres:13
@@ -67,36 +73,29 @@ jobs:
 
     - uses: actions/checkout@v4
     - uses: julia-actions/setup-julia@v1
-      with:
-        version: ${{ matrix.julia-version }}
     - uses: julia-actions/cache@v1
     - uses: julia-actions/julia-buildpkg@v1
-
     - uses: julia-actions/julia-runtest@v1
-      if: matrix.runtests_with_coverage == false
 
-    - name: runtests with coverage
-      if: matrix.runtests_with_coverage
-      run: |
-           julia --project=. -e 'using Pkg; Pkg.test(coverage=true)'
-           julia --project=. -e 'using Pkg; Pkg.add("Coverage"); using Coverage; cov = Coverage.process_folder(); mkdir("coverage"); Coverage.LCOV.writefile("coverage/lcov.info", cov)'
+    - uses: julia-actions/julia-processcoverage@v1
+      if: matrix.coverage == true
+
     - uses: codecov/codecov-action@v1
-      if: matrix.runtests_with_coverage
+      if: matrix.coverage == true
+      with:
+        file: lcov.info
 
-  ###
-  ### stuck on Precompiling LibPQ, DataFrames
-  ###
-  # RunForMacOS:
-  #   needs: Test
-  #   if: github.event.ref == 'refs/heads/master'
-  #   runs-on: macos-latest
-  #   steps:
-  #     - uses: actions/checkout@master
-  #     - name: runtests
-  #       run: |
-  #            julia --project=. -e 'using Pkg; Pkg.test()'
+  RunForMacOS:
+     needs: Test
+     if: github.event.ref == 'refs/heads/master'
+     runs-on: macos-latest
+     steps:
+      - uses: actions/checkout@v4
+      - uses: julia-actions/setup-julia@v1
+      - uses: julia-actions/cache@v1
+      - uses: julia-actions/julia-buildpkg@v1
+      - uses: julia-actions/julia-runtest@v1
 
-  # ERROR: LoadError: could not load symbol "duckdb_vector_size"
   # RunForWindows:
   #   needs: Test
   #   if: github.event.ref == 'refs/heads/master'
