compat SQLite 1.8, MySQL 1.5

--- a/Project.toml
+++ b/Project.toml
@@ -9,8 +9,8 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 [compat]
 Jive = "0.3"
 LibPQ = "1.18"
-SQLite = "1.6"
-MySQL = "1.4"
+SQLite = "1.6, 1.8"
+MySQL = "1.4, 1.5"
 MariaDB_Connector_C_jll = "3.3"
 DuckDB = "1.2"
 DataFrames = "1.7"
